--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "bignum": "^0.13.0",
-    "js-sha256": "^0.9.0"
+    "js-sha256": "^0.9.0",
+    "ln-service": "^47.5.4"
   }
 }
